# conchitta

./: .gitignore  .gitmodules  README.md
arduino/trex/: IOpins.h  trex.ino
code/: PseudoCode_brain.docx
code/rpi/camcv/: camcv  (+4 more)
meca/: Chenille_droite.SLDASM  Chenille_gauche.SLDASM  Chenille_gauche2.SLDASM  Chenille_gauche3.SLDASM  Chenilles_chassis.SLDASM  Chenilles_chassis_v1.SLDASM  Conchitta.SLDASM  Courroie1-12.sldprt  Courroie1-2.sldprt  Courroie1-22.sldprt  L.SLDPRT  MCM_06_02.SLDPRT  Pololulu37D.SLDPRT  Pololulu37D2.SLDPRT  Ramasseur.SLDASM  SetScrew.sldprt  ass_conteneur_rampe.SLDASM  ass_plaque_chaine_pign.SLDASM  axe_pignon_moteur.SLDPRT  axe_pignon_moteur2.SLDPRT  axe_pignon_rouelibre.SLDPRT  axe_pignon_rouelibre2.SLDPRT  axe_pignon_rouelibre2_v2.SLDPRT  axe_pignon_rouelibre_tendeur.SLDPRT  axe_pignon_rouelibre_tendeur2.SLDPRT  axe_pignon_rouelibre_tendeur2_v2.SLDPRT  brique.SLDPRT  capot.SLDPRT  chaine_v1.SLDASM  comparaison_pignons.SLDASM  conteneur_tole.SLDPRT  disque_pignon.SLDPRT  disque_pignon2.SLDPRT  ecarteur_cenille.SLDPRT  ecarteur_cenille2.SLDPRT  ecarteur_cenille_long.SLDPRT  el_chaine_mobile_v1.SLDASM  element_chaine.SLDASM  element_chaine2.SLDASM  equations.txt  (+43 more)
rpi/main/: CMakeLists.txt  LedDetectionRPi.cpp  commArduinoRPi.cpp  essaiBottleDetection_RPi.cpp  project.cpp
rpi/main/backup/: CMakeLists_old.txt  CMakeLists_old.txt.save  commArduinoRPi_backup1June.cpp  project_backup2June18h42.cpp  project_backup2June22h10.cpp  project_backup3June22h50.cpp  project_backup4June00h42.cpp  project_backup8June18h22.cpp  project_backup9June00h57.cpp
(+171 files in other folders)
