cmake_minimum_required (VERSION 2.8) 
set (CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};/home/pi/raspicam-0.1.3/build")
project (raspicam_test)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
	MESSAGE(STATUS "COMPILING OPENCV TESTS")
	add_executable (project2 project.cpp)  
	target_link_libraries (project2 ${raspicam_CV_LIBS} wiringPi wiringPiDev)
	#add_executable (ledDetect LedDetectionRPi.cpp)
	#target_link_libraries (ledDetect ${raspicam_CV_LIBS} wiringPi wiringPiDev)
	#add_executable (bottleDetection essaiBottleDetection_RPi.cpp)
	#target_link_libraries (bottleDetection ${raspicam_CV_LIBS} wiringPi wiringPiDev)
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
